finished home work

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>react</title>
 </head>
 <body>
-    <script src="./"></script>
+    <script src="./react-home1/script.js"></script>
 </body>
 </html>
